# like-aho-corasick-but-different-py

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  MANIFEST.in  Makefile  README.md  build-wheels.sh  pyproject.toml  setup.py
lacbd/: __init__.py
like_aho_corasick_but_different/: __init__.py
src/: lib.rs
