[tool.poetry]
name = "like-aho-corasick-but-different"
version = "0.1.0"
description = "Fast subsentence finding"
authors = ["Ben Simms <ben@bensimms.moe>"]

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
