[tool.poetry]
name = "lacbd"
version = "0.1.2"
description = "Fast subsentence finding"
authors = ["Ben Simms <ben@bensimms.moe>"]
include = ["like_aho_corasick_but_different/liblike_aho_corasick_but_different.so"]

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
